--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ bin-release/
 .png
 .epsc
 
+# Do not safe strange name files2
+.strangenamefiles2
+
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
